--- a/SoundLove/SoundLove/Base.lproj/Main.storyboard
+++ b/SoundLove/SoundLove/Base.lproj/Main.storyboard
@@ -74,6 +74,7 @@
             <string>Montserrat-Regular</string>
             <string>Montserrat-Regular</string>
             <string>Montserrat-Regular</string>
+            <string>Montserrat-Regular</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -1299,12 +1300,23 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" preferredMaxLayoutWidth="200" translatesAutoresizingMaskIntoConstraints="NO" id="bWn-HS-w7F">
+                                        <rect key="frame" x="120" y="0.0" width="200" height="17"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="qOc-yP-qHL"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="2ww-6n-7zJ" secondAttribute="trailing" constant="54" id="33B-a3-e3Q"/>
                                     <constraint firstItem="2ww-6n-7zJ" firstAttribute="leading" secondItem="0gm-xH-Gpp" secondAttribute="trailing" constant="10" id="5oQ-xm-bkb"/>
                                     <constraint firstAttribute="centerY" secondItem="2ww-6n-7zJ" secondAttribute="centerY" id="E6p-YI-UOu"/>
+                                    <constraint firstItem="bWn-HS-w7F" firstAttribute="top" secondItem="egL-6c-W2G" secondAttribute="top" id="WNg-Rf-bOi"/>
+                                    <constraint firstAttribute="trailing" secondItem="bWn-HS-w7F" secondAttribute="trailing" id="WVC-0p-DXh"/>
                                     <constraint firstAttribute="centerY" secondItem="0gm-xH-Gpp" secondAttribute="centerY" id="hRJ-Fq-2rH"/>
                                     <constraint firstAttribute="height" constant="62" id="koe-zh-W2b"/>
                                     <constraint firstItem="0gm-xH-Gpp" firstAttribute="leading" secondItem="egL-6c-W2G" secondAttribute="leading" id="n7f-f8-Njg"/>
@@ -1332,6 +1344,7 @@
                     <connections>
                         <outlet property="customNavigationView" destination="egL-6c-W2G" id="pOh-8o-SvT"/>
                         <outlet property="tableView" destination="wRd-DX-5kp" id="SXw-o9-MNq"/>
+                        <outlet property="versionNumberLabel" destination="bWn-HS-w7F" id="jMm-r0-7Ax"/>
                         <segue destination="TIm-mn-KeI" kind="push" identifier="openWhatWeDo" id="cWc-Z7-aVb"/>
                     </connections>
                 </viewController>
@@ -1635,6 +1648,13 @@
                                         <rect key="frame" x="0.0" y="428" width="320" height="40"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="cmz-9o-KKH">
+                                        <rect key="frame" x="30" y="200" width="260" height="69"/>
+                                        <string key="text">Deine Freunde-Liste ist leider leer, da bischer keine Freundezu diesem Konzert hinzugefügt wurden. lade jetzt Deine Freunde ein.</string>
+                                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="14"/>
+                                        <color key="textColor" red="0.41176470590000003" green="0.91107859260000001" blue="0.5568627451" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -1642,10 +1662,14 @@
                                     <constraint firstAttribute="trailing" secondItem="ELz-I7-8UA" secondAttribute="trailing" id="8Hh-jt-6Uz"/>
                                     <constraint firstAttribute="bottom" secondItem="ELz-I7-8UA" secondAttribute="bottom" constant="40" id="OQC-NM-LM7"/>
                                     <constraint firstItem="ELz-I7-8UA" firstAttribute="top" secondItem="GgQ-Sx-EP0" secondAttribute="top" id="Qdj-9E-vhz"/>
+                                    <constraint firstAttribute="centerX" secondItem="cmz-9o-KKH" secondAttribute="centerX" id="RMF-AR-NBN"/>
                                     <constraint firstAttribute="trailing" secondItem="2NK-6c-LyR" secondAttribute="trailing" id="TdZ-E2-0zN"/>
                                     <constraint firstItem="ELz-I7-8UA" firstAttribute="leading" secondItem="GgQ-Sx-EP0" secondAttribute="leading" id="UPR-En-Ua4"/>
                                     <constraint firstItem="2NK-6c-LyR" firstAttribute="leading" secondItem="GgQ-Sx-EP0" secondAttribute="leading" id="bgv-pS-Xtm"/>
+                                    <constraint firstItem="cmz-9o-KKH" firstAttribute="leading" secondItem="GgQ-Sx-EP0" secondAttribute="leading" constant="30" id="gBV-7P-Siz"/>
                                     <constraint firstItem="2NK-6c-LyR" firstAttribute="top" secondItem="ELz-I7-8UA" secondAttribute="bottom" id="iCE-KX-4uj"/>
+                                    <constraint firstAttribute="centerY" secondItem="cmz-9o-KKH" secondAttribute="centerY" id="qwp-cl-UAl"/>
+                                    <constraint firstAttribute="trailing" secondItem="cmz-9o-KKH" secondAttribute="trailing" constant="30" id="yrF-9y-5As"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -1663,6 +1687,7 @@
                     <navigationItem key="navigationItem" id="CMZ-aX-O2j"/>
                     <connections>
                         <outlet property="collectionView" destination="ELz-I7-8UA" id="aeM-Oi-UXg"/>
+                        <outlet property="emptyViewLabel" destination="cmz-9o-KKH" id="YpQ-tu-cRX"/>
                         <outlet property="pageControl" destination="2NK-6c-LyR" id="DfM-bH-cY4"/>
                         <outlet property="wrapperView" destination="GgQ-Sx-EP0" id="Rqr-E8-x9Z"/>
                     </connections>
@@ -1698,7 +1723,7 @@
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="248" verticalCompressionResistancePriority="752" text="Gary Barnett" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="260" translatesAutoresizingMaskIntoConstraints="NO" id="2Qi-iE-SeE">
                                                 <rect key="frame" x="30" y="170" width="260" height="20"/>
                                                 <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="16"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YqA-ld-uGh">
@@ -1759,19 +1784,19 @@
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Datum" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sy6-US-4DF">
                                                 <rect key="frame" x="40" y="15" width="49" height="18"/>
                                                 <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="14"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Ort" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4K6-mq-dqh">
                                                 <rect key="frame" x="40" y="64" width="24" height="18"/>
                                                 <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="14"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="248" text="Preis" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5bM-0Q-cfh">
                                                 <rect key="frame" x="40" y="101" width="35" height="18"/>
                                                 <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="14"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="753" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="191" translatesAutoresizingMaskIntoConstraints="NO" id="FUv-T8-Sgy">
@@ -1779,19 +1804,19 @@
                                                 <string key="text">17.07. - 19.07.2015
 noch 40 Tage</string>
                                                 <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="14"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" text="Gräfenhainichen (DE)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="193" translatesAutoresizingMaskIntoConstraints="NO" id="ics-eK-mC0">
                                                 <rect key="frame" x="107" y="64" width="193" height="17"/>
                                                 <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="14"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="ab 25,00 €" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="193" translatesAutoresizingMaskIntoConstraints="NO" id="JAG-zM-QA1">
                                                 <rect key="frame" x="108" y="101" width="193" height="17"/>
                                                 <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="14"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
